<resources>
    <string name="app_name">Popular-Movies</string>
    <string name="action_settings">Settings</string>
    <string name="text"><b>(Adventure,Fantasy,Action)</b></string>
    <string name="title_for_movie_details"><b>American SuperHero.Marvel</b></string>
    <string name="detail_text_for_movie">Black Panther is an upcoming American superhero film based on the Marvel Comics character of the same name. Produced by Marvel Studios and distributed by Walt Disney Studios Motion Pictures, it is intended to be the eighteenth film in the Marvel Cinematic Universe.Black Panther is an upcoming American superhero film based on the Marvel Comics character of the same name. Produced by Marvel Studios and distributed by Walt Disney Studios Motion Pictures, it is intended to be the eighteenth film in the Marvel Cinematic Universe.Black Panther is an upcoming American superhero film based on the Marvel Comics character of the same name. Produced by Marvel Studios and distributed by Walt Disney Studios Motion Pictures, it is intended to be the eighteenth film in the Marvel Cinematic Universe.Black Panther is an upcoming American superhero film based on the Marvel Comics character of the same name. Produced by Marvel Studios and distributed by Walt Disney Studios Motion Pictures, it is intended to be the eighteenth film in the Marvel Cinematic Universe.Black Panther is an upcoming American superhero film based on the Marvel Comics character of the same name. Produced by Marvel Studios and distributed by Walt Disney Studios Motion Pictures, it is intended to be the eighteenth film in the Marvel Cinematic Universe.Black Panther is an upcoming American superhero film based on the Marvel Comics character of the same name. Produced by Marvel Studios and distributed by Walt Disney Studios Motion Pictures, it is intended to be the eighteenth film in the Marvel Cinematic Universe.Black Panther is an upcoming American superhero film based on the Marvel Comics character of the same name. Produced by Marvel Studios and distributed by Walt Disney Studios Motion Pictures, it is intended to be the eighteenth film in the Marvel Cinematic Universe.</string>
    <string name="rating"><b>7.2</b></string>
    <string name="title_for_movie"><b>Black Panther</b></string>
    <string name="reviews"><b>Reviews</b></string>
    <string name="writer"><i>Grimy Wrote : </i></string>
    <string name="details_text_for_movie_review">Black Panther is an upcoming American superhero film based on the Marvel Comics character of the same name. Produced by Marvel Studios and distributed by Walt Disney Studios Motion Pictures, it is intended to be the eighteenth film in the Marvel Cinematic Universe. The film is directed by Ryan Coogler from a screenplay by him and Joe Robert Cole, and stars Chadwick Boseman as T Challa / Black Panther alongside Michael B. Jordan, Lupita Nyongo, Danai Gurira, Martin Freeman, Daniel Kaluuya, Letitia Wright, Winston Duke, Angela Bassett, Forest Whitaker, and Andy Serkis. In Black Panther, TChalla returns home as king of Wakanda but finds his sovereignty challenged by a long-time adversary in a conflict that has global consequences.

BWesley Snipes first mentioned his intention to work on a Black Panther film in 1992, with that project going through multiple iterations over the next decade but never coming to fruition. A Black Panther film was announced as one of the ten films based on Marvel comics that would be developed by Marvel Studios and distributed by Paramount Pictures in September 2005, with Mark Bailey hired to write a script in January 2011. Black Panther was officially announced in October 2014,Black Panther is an upcoming American superhero film based on the Marvel Comics character of the same name. Produced by Marvel Studios and distributed by Walt Disney Studios Motion Pictures, it is intended to be the eighteenth film in the Marvel Cinematic Universe. The film is directed by Ryan Coogler from a screenplay by him and Joe Robert Cole, and stars Chadwick Boseman as T Challa / Black Panther alongside Michael B. Jordan, Lupita Nyongo, Danai Gurira, Martin Freeman, Daniel Kaluuya, Letitia Wright, Winston Duke, Angela Bassett, Forest Whitaker, and Andy Serkis. In Black Panther, TChalla returns home as king of Wakanda but finds his sovereignty challenged by a long-time adversary in a conflict that has global consequences.

BWesley Snipes first mentioned his intention to work on a Black Panther film in 1992, with that project going through multiple iterations over the next decade but never coming to fruition. A Black Panther film was announced as one of the ten films based on Marvel comics that would be developed by Marvel Studios and distributed by Paramount Pictures in September 2005, with Mark Bailey hired to write a script in January 2011. Black Panther was officially announced in October 2014,Black Panther is an upcoming American superhero film based on the Marvel Comics character of the same name. Produced by Marvel Studios and distributed by Walt Disney Studios Motion Pictures, it is intended to be the eighteenth film in the Marvel Cinematic Universe. The film is directed by Ryan Coogler from a screenplay by him and Joe Robert Cole, and stars Chadwick Boseman as T Challa / Black Panther alongside Michael B. Jordan, Lupita Nyongo, Danai Gurira, Martin Freeman, Daniel Kaluuya, Letitia Wright, Winston Duke, Angela Bassett, Forest Whitaker, and Andy Serkis. In Black Panther, TChalla returns home as king of Wakanda but finds his sovereignty challenged by a long-time adversary in a conflict that has global consequences.

BWesley Snipes first mentioned his intention to work on a Black Panther film in 1992, with that project going through multiple iterations over the next decade but never coming to fruition. A Black Panther film was announced as one of the ten films based on Marvel comics that would be developed by Marvel Studios and distributed by Paramount Pictures in September 2005, with Mark Bailey hired to write a script in January 2011. Black Panther was officially announced in October 2014.</string>
</resources>
