<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bgimage"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:background="#8C000000"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_black_panther"
                    android:layout_width="150dp"
                    android:layout_height="210dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="24dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/blackpanther" />

                <FrameLayout
                    android:id="@+id/fl_heart_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_favorite_red_24dp" />

                    <TextView
                        android:id="@+id/tv_fav_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@id/iv_black_panther"
                        android:layout_marginLeft="7dp"
                        android:layout_marginTop="7dp"
                        android:text="@string/rating"
                        android:textColor="@color/fullWhite" />

                </FrameLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/iv_black_panther"
                    android:layout_alignRight="@id/iv_black_panther"
                    android:layout_marginBottom="4dp"
                    android:layout_marginRight="4dp"
                    android:src="@drawable/ic_crop_free_white_24dp" />

                <TextView
                    android:id="@+id/title_for_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/iv_black_panther"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@id/iv_black_panther"
                    android:text="@string/title_for_movie_details"
                    android:textColor="@color/fullWhite"
                    android:textSize="16sp" />

                <android.support.v4.widget.NestedScrollView
                    android:id="@+id/sv_text_for_movie_image"
                    android:layout_width="170dp"
                    android:layout_height="200dp"
                    android:layout_alignLeft="@id/title_for_movie"
                    android:layout_below="@id/title_for_movie"
                    android:fitsSystemWindows="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingMultiplier="1.2"
                        android:text="@string/detail_text_for_movie"
                        android:textColor="@color/fullWhite"
                        android:textSize="12dp" />

                </android.support.v4.widget.NestedScrollView>

                <RatingBar
                    android:id="@+id/rb_star"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignLeft="@id/iv_black_panther"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/iv_black_panther"
                    android:layout_marginTop="16dp"
                    android:numStars="9"
                    android:progressBackgroundTint="#FFFF00"
                    android:scaleX="0.6"
                    android:scaleY="0.6"
                    android:stepSize="0.5"
                    android:transformPivotX="0dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/rb_star"
                    android:layout_below="@+id/rb_star"
                    android:text="Release : January 2017"
                    android:textColor="@color/fullWhite"
                    android:textSize="16dp" />

            </RelativeLayout>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/sv_movies_details_main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/rv_movie_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark">

            <FrameLayout
                android:id="@+id/fl_movie_title"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorPrimary">

                <TextView
                    android:id="@+id/tv_black_panther_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_marginLeft="16dp"
                    android:text="@string/title_for_movie"
                    android:textColor="@color/fullWhite"
                    android:textSize="16dp" />

            </FrameLayout>

            <TextView
                android:id="@+id/tv_adventure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fl_movie_title"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:padding="4dp"
                android:background="@drawable/text_border_1"
                android:text="Adventure"
                android:textColor="@color/colorBlack"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/lbl_divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tv_adventure"
                android:layout_below="@id/fl_movie_title"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/tv_adventure"
                android:gravity="bottom"
                android:text="|"
                android:textColor="@color/fullWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_fantansy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/lbl_divider"
                android:layout_below="@id/fl_movie_title"
                android:layout_marginLeft="4dp"
                android:padding="4dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/lbl_divider"
                android:background="@drawable/text_border_1"
                android:text="Fantasy"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/lbl_divider2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tv_fantansy"
                android:layout_below="@id/fl_movie_title"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/tv_fantansy"
                android:gravity="bottom"
                android:text="|"
                android:textColor="@color/fullWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/lbl_divider2"
                android:layout_below="@id/fl_movie_title"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/lbl_divider2"
                android:background="@drawable/text_border_1"
                android:text="action"
                android:padding="4dp"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_movie_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv_adventure"
                android:layout_below="@id/tv_adventure"
                android:layout_marginTop="12dp"
                android:background="@drawable/text_border"
                android:padding="8dp"
                android:text="2 hrs 22 mins"
                android:textColor="@color/fullWhite"
                android:textSize="14sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_for_movie_details"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/tv_movie_duration"
                android:layout_marginTop="20dp"
                android:fitsSystemWindows="true" />

            <TextView
                android:id="@+id/tv_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/rv_for_movie_details"
                android:layout_below="@id/rv_for_movie_details"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/reviews"
                android:textColor="@color/fullWhite"
                android:textSize="16dp" />

            <View
                android:id="@+id/underline_for_Review"
                android:layout_width="60dp"
                android:layout_height="3dp"
                android:layout_alignLeft="@id/tv_reviews"
                android:layout_below="@id/tv_reviews"
                android:layout_marginTop="8dp"
                android:background="@color/fullWhite" />

            <TextView
                android:id="@+id/tv_writer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv_reviews"
                android:layout_below="@id/tv_reviews"
                android:layout_marginTop="32dp"
                android:text="@string/writer"
                android:textColor="@color/fullWhite" />

            <TextView

                android:id="@+id/tv_movie_details_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv_writer_name"
                android:layout_below="@id/tv_writer_name"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/details_text_for_movie_review"
                android:textColor="@color/fullWhite"
                android:textSize="12dp" />

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_favourite_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_add_white_24dp"
        app:fabSize="normal"
        app:layout_anchor="@id/app_bar_details"
        app:layout_anchorGravity="bottom|end" />
</android.support.design.widget.CoordinatorLayout>